objects/Opportunity_CheckList__c.object
<CustomObject>
    <fields>
        <fullName>CategoryNo__c</fullName>
        <label>CategoryNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_No__c</fullName>
        <label>Comment No</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comment_Yes__c</fullName>
        <label>Comment Yes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Help_Message__c</fullName>
        <label>Help Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuestionNo__c</fullName>
        <label>QuestionNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Opportunity CheckList</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CategoryNo__c</columns>
        <columns>QuestionNo__c</columns>
        <columns>Question__c</columns>
        <columns>Help_Message__c</columns>
        <columns>Comment_Yes__c</columns>
        <columns>Comment_No__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Category__c</columns>
        <columns>CategoryNo__c</columns>
        <columns>QuestionNo__c</columns>
        <columns>Question__c</columns>
        <columns>Help_Message__c</columns>
        <columns>Comment_Yes__c</columns>
        <columns>Comment_No__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Opportunity CheckList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity CheckLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>